# deadly-module

./: README.md  pyproject.toml  setup.py
deadly/: __init__.py  deadly.py
