[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name='deadly'  # 项目名称
version='1.3.4'    # 项目版本
authors = [
    {name = "xugoudaobai", email = "2093289509@qq.com"},
]
description = "A 'deadly' module in Python"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    'Programming Language :: Python :: 3',
        'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
        'Operating System :: OS Independent',
]

[project.urls]
Homepage = "https://github.com/xugoudaob/deadly-module"

